2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_graph.php: Created new graph function to draw task 
	per user in a project.
	* include/functions_db.php: Fixed a problem with child task deleting
	tasks.
	* operation/projects/task_planning.php: Fixed some visual style bugs
	adding new graphs and fixed the bug that deletes all users updating tasks.

2012-03-26 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_detail.php: Fixed a bug in hour calc.

2012-03-26 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* include/functions_graph.php: Created graph to show task status.
	* operation/projects/task_planning.php: Created task planning interface.
	* operation/side_menu.php: Added task planning link to menu.

2012-03-22 Sancho Lerena <slerena@artica.es>

	* operation/search.php: Fixed search when you're admin.

2012-03-20 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/integria_cron.php: Fixed a bug calculating SLA graph
	values.

2012-03-20  Sancho Lerena <slerena@artica.es>

	* operation/search.php: Fixed search for users.

	* integria_db.sql: Fixed ";" in tsla.

	* include/integria_cron.php,
	include/functions_db.php: Modified code in order to fix some problems
	with the new SLA metric (inactivity).

2012-03-20 Dario Rodriguez <dario.rodriguez@artica.es>

	* integria.fedora.spec: Added php5-imap dependece to fedora spec

2012-03-20 Dario Rodriguez <dario.rodriguez@artica.es>

	* integria_cron.php,
	functions_pop3.php: Added php imap extension to installer dependences
	and added a check statement in integria cron to avoid cron script
	failures.

2012-03-16  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_detail.php: Solved problem on group view
	on editing/viewing incidents.

	* integria_demo.sql,
	integria_db.sql
	upgrade_to_3.0.sql: New DB field in tsla.
	
	* include/js/integria_incident_search.js: Fixed problem when change GROUP