@@ -1,5 +1,10 @@
 2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* operation/projects/task_planning.php: Fixed a visual style centering
+	the statistics summary charts.
+
+2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* include/functions_graph.php: Created new graph function to draw task 
 	per user in a project.
 	* include/functions_db.php: Fixed a problem with child task deleting
